-- separate animations into own sass file -- styling for mobile menu almost done     >> fix hamburger transition     >> add active and hover bg col -- colour scheme selected (temp, dont like it too much atm)

--- a/react-app/src/scss/_variables.scss
+++ b/react-app/src/scss/_variables.scss
@@ -1,4 +1,6 @@
 //some ideas
 $font: sans-serif;
-$primary-col: rgb(19, 111, 216);
-$secondary-col: rgb(206, 116, 7);
+$primary-col: #732DD0;
+$secondary-col: #18A4E7;
+$tertiary-col: #de7119;
+$background-col: #ececec;
